# monoReader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  example.env  main.py  pyproject.toml  requirements.txt
src/: config.py  google_api.py  main.py  parsers.py  schemas.py
src/web/: main.py
tests/: test_google_api.py
