[tool.poetry]
name = "monoreader"
version = "0.1.0"
description = ""
authors = ["alexey_naidiuk <alexeynaidiuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^6.1.0"
pandas = "^2.2.2"
httpx = "^0.27.0"
gspread-dataframe = "^3.3.1"
pytest = "^8.2.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
